--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="url=https://puetsua.net" />
+    <meta http-equiv="refresh" content="0; url=https://puetsua.net" />
     <link rel="canonical" href="https://puetsua.net" />
 </head>
 
